# Hask-GoL

./: .gitignore  LICENSE  README.md  gol.cabal  stack.yaml
app/: Main.hs
cbits/: mavericks-c2hs-workaround.h
src/: CLP.hs  Torus.hs
